# open-fe

./: .pre-commit-config.yaml  README.md  pyproject.toml
configs/: config.yaml
src/open_fe/: base.py  constant.py  core.py  data_center.py  data_loader.py  data_saver.py  dataset.py  exceptions.py  feature_generator.py  model_center.py  ops.py  skeleton.py  split_method.py  trainer.py  trainer_center.py  utils.py
